Added html elements

--- a/productivity/index.html
+++ b/productivity/index.html
@@ -9,15 +9,14 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <main>
-        <h1>Productiviy Calculator</h1>  
+    <main> 
         <div>
             <p style="text-align:center"><strong>Productivity Calculator</strong></p>
-            <p style="text-align:center"><strong>Entry :&nbsp; Value</strong></p>
-            <p style="text-align:center"><strong>Exit :&nbsp;Value</strong></p>
-            <p style="text-align:center"><strong>Total Time :&nbsp;Value</strong></p>
-            <p style="text-align:center"><strong>Billable Time :&nbsp;Value</strong></p>
-            <p style="text-align:center"><strong>Productivity (%):&nbsp;Value</strong></p>
+            <p style="text-align:center"><strong>Entry :&nbsp; <input type="datetime-local" id="entrytime" name="entrytime"></strong></p>
+            <p style="text-align:center"><strong>Exit :&nbsp; <input type="datetime-local" id="exittime" name="exittime"></strong></p>
+            <p style="text-align:center"><strong>Total Time :&nbsp; <input type="time" id="totaltime" name="totaltime"></strong></p>
+            <p style="text-align:center"><strong>Billable Time :&nbsp; <input type="time" id="billabletime" name="billabletime"></strong></p>
+            <p style="text-align:center"><strong>Productivity (%):&nbsp;<input type="productivity" id="productivity" name="productivity" min="1" max="100"></strong></p>
             <p style="text-align:center">&nbsp;</p>
             <p style="text-align:center"><strong>Calculate</strong></p>
             <p style="text-align:center">&nbsp;</p>
