--- a/productivity/index.html
+++ b/productivity/index.html
@@ -13,8 +13,9 @@
         <div>
             <p style="text-align:center"><strong>Productivity Calculator</strong></p>
             <p style="text-align:center"><strong>Entry :&nbsp; <input type="datetime-local" id="entrytime" name="entrytime"></strong></p>
-            <p style="text-align:center"><strong>Exit :&nbsp; <input type="datetime-local" id="exittime" name="exittime"></strong></p>
             <p style="text-align:center"><strong>Total Time :&nbsp; <input type="time" id="totaltime" name="totaltime"></strong></p>
+            <p style="text-align:center"><strong>Save Time :&nbsp; <input type="time" id="savetime" name="savetime"></strong></p>
+            <p style="text-align:center"><strong>Exit :&nbsp; <input type="datetime-local" id="exittime" name="exittime"></strong></p>
             <p style="text-align:center"><strong>Billable Time :&nbsp; <input type="time" id="billabletime" name="billabletime"></strong></p>
             <p style="text-align:center"><strong>Productivity (%):&nbsp;<input type="productivity" id="productivity" name="productivity" min="1" max="100"></strong></p>
             <p style="text-align:center">&nbsp;</p>
@@ -29,8 +30,14 @@
          } 
          
          function calculate() {
-            alert('Calculate!')
-         } 
+
+            const entrydate = new Date(document.querySelector('input[name="entrytime"]').value).toISOString()
+            const totaltime = document.querySelector('input[type="totaltime"]').value;
+            const savetime = document.querySelector('input[type="savetime"]').value;
+
+            alert(entrydate+totaltime-savetime);
+
+        } 
 
     </script>
 
