--- a/productivity/index.html
+++ b/productivity/index.html
@@ -14,7 +14,7 @@
             <p style="text-align:center"><strong>Productivity Calculator</strong></p>
             <p style="text-align:center"><strong>Entry :&nbsp; <input type="datetime-local" id="entrytime" name="entrytime"></strong></p>
             <p style="text-align:center"><strong>Total Time :&nbsp; <input type="time" id="totaltime" name="totaltime"></strong></p>
-            <p style="text-align:center"><strong>Save Time :&nbsp; <input type="time" id="savetime" name="savetime"></strong></p>
+            <p style="text-align:center"><strong>Save Time :&nbsp; <input type="number" id="savetime" name="savetime"></strong></p>
             <p style="text-align:center"><strong>Exit :&nbsp; <input type="datetime-local" id="exittime" name="exittime"></strong></p>
             <p style="text-align:center"><strong>Billable Time :&nbsp; <input type="time" id="billabletime" name="billabletime"></strong></p>
             <p style="text-align:center"><strong>Productivity (%):&nbsp;<input type="productivity" id="productivity" name="productivity" min="1" max="100"></strong></p>
@@ -35,8 +35,13 @@
             const totaltime = document.querySelector('input[name="totaltime"]').value;
             const savetime = document.querySelector('input[name="savetime"]').value;
 
-            alert(entrydate+totaltime-savetime);
+            alert(entrydate);
 
+            alert(totaltime);
+
+            alert(savetime);
+
+            
         } 
 
     </script>
