--- a/productivity/index.html
+++ b/productivity/index.html
@@ -12,9 +12,9 @@
     <main> 
         <div>
             <p style="text-align:center"><strong>Productivity Calculator</strong></p>
-            <p style="text-align:center"><strong>Entry :&nbsp; <input type="time-local" id="entrytime" name="entrytime" value="08:30"></strong></p>
+            <p style="text-align:center"><strong>Entry :&nbsp; <input type="time" id="entrytime" name="entrytime" value="07:30"></strong></p>
             <p style="text-align:center"><strong>Total Time :&nbsp; <input type="time" id="totaltime" name="totaltime"></strong></p>
-            <p style="text-align:center"><strong>Save Time :&nbsp; <input type="number" id="savetime" name="savetime"></strong></p>
+            <p style="text-align:center"><strong>Save Time :&nbsp; <input type="number" id="savetime" name="savetime"></strong>&nbsp;minutes</p>
             <p style="text-align:center"><strong>Exit :&nbsp; <input type="time-local" id="exittime" name="exittime"></strong></p>
             <p style="text-align:center"><strong>Billable Time :&nbsp; <input type="time" id="billabletime" name="billabletime"></strong></p>
             <p style="text-align:center"><strong>Productivity (%):&nbsp;<input type="productivity" id="productivity" name="productivity" min="1" max="100"></strong></p>
