--- a/productivity/index.html
+++ b/productivity/index.html
@@ -7,14 +7,28 @@
     <title>My Website</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <style>
+.without_ampm::-webkit-datetime-edit-ampm-field {
+   display: none;
+ }
+ input[type=time]::-webkit-clear-button {
+   -webkit-appearance: none;
+   -moz-appearance: none;
+   -o-appearance: none;
+   -ms-appearance:none;
+   appearance: none;
+   margin: -10px; 
+ }
+    </style>
+
   </head>
   <body>
     <main> 
         <div>
             <p style="text-align:center"><strong>Productivity Calculator</strong></p>
             <p style="text-align:center"><strong>Entry :&nbsp; <input type="time" id="entrytime" name="entrytime" value="07:30"></strong></p>
-            <p style="text-align:center"><strong>Total Time :&nbsp; <input type="time" id="totaltime" name="totaltime"></strong></p>
-            <p style="text-align:center"><strong>Save Time :&nbsp; <input type="number" id="savetime" name="savetime"></strong>&nbsp;minutes</p>
+            <p style="text-align:center"><strong>Total Time :&nbsp; <input type="time" id="totaltime" name="totaltime" value="08:00" class="without_ampm"> </strong></p>
+            <p style="text-align:center"><strong>Save Time :&nbsp; <input type="time" id="savetime" name="savetime" value="00:40" class="without_ampm"></strong>&nbsp;minutes</p>
             <p style="text-align:center"><strong>Exit :&nbsp; <input type="time-local" id="exittime" name="exittime"></strong></p>
             <p style="text-align:center"><strong>Billable Time :&nbsp; <input type="time" id="billabletime" name="billabletime"></strong></p>
             <p style="text-align:center"><strong>Productivity (%):&nbsp;<input type="productivity" id="productivity" name="productivity" min="1" max="100"></strong></p>
