--- a/productivity/index.html
+++ b/productivity/index.html
@@ -28,7 +28,7 @@
             <p style="text-align:center"><strong>Productivity Calculator</strong></p>
             <p style="text-align:center"><strong>Entry :&nbsp; <input type="time" id="entrytime" name="entrytime" value="07:30"></strong></p>
             <p style="text-align:center"><strong>Total Time :&nbsp; <input type="time" id="totaltime" name="totaltime" value="08:00" class="without_ampm"> </strong></p>
-            <p style="text-align:center"><strong>Save Time :&nbsp; <input type="time" id="savetime" name="savetime" value="00:40" class="without_ampm"></strong>&nbsp;minutes</p>
+            <p style="text-align:center"><strong>Save Time :&nbsp; <input type="number" id="savetime" name="savetime" value="00:40"></strong>&nbsp;minutes</p>
             <p style="text-align:center"><strong>Exit :&nbsp; <input type="time-local" id="exittime" name="exittime"></strong></p>
             <p style="text-align:center"><strong>Billable Time :&nbsp; <input type="time" id="billabletime" name="billabletime"></strong></p>
             <p style="text-align:center"><strong>Productivity (%):&nbsp;<input type="productivity" id="productivity" name="productivity" min="1" max="100"></strong></p>
