--- a/productivity/index.html
+++ b/productivity/index.html
@@ -60,6 +60,10 @@
 
             var entryDateValue = dayjs(entrydate, "HH:mm");
             var totaltimeValue = dayjs(totaltime, "HH:mm");
+
+            alert(entryDateValue);
+            alert(totaltimeValue);
+            
             
             //var exitDateValue = entryDateValue.add(totaltimeValue.hour(), 'hour').add(totaltimeValue.minute(), 'minute').subtract(savetime,'minute');
 
