--- a/productivity/index.html
+++ b/productivity/index.html
@@ -25,7 +25,7 @@
     <main> 
         <div>
             <p style="text-align:center"><strong>Time Calculator</strong></p>
-            <p style="text-align:center"><strong>Entry :&nbsp; <input type="datetime-local" id="entrytime" name="entrytime"></strong></p>
+            <p style="text-align:center"><strong>Entry :&nbsp; <input type="datetime-local" id="entrydatetime" name="entrydatetime"></strong></p>
             <p style="text-align:center"><strong>Total Time :&nbsp; <input type="time" id="totaltime" name="totaltime" value="08:00" class="without_ampm"> </strong></p>
             <p style="text-align:center"><strong>Save Time :&nbsp; <input type="number" id="savetime" name="savetime" value="00:40"></strong>&nbsp;minutes</p>
             <p style="text-align:center"><strong>Exit :&nbsp; <input type="time-local" id="exittime" name="exittime"></strong></p>
