--- a/productivity/index.html
+++ b/productivity/index.html
@@ -56,7 +56,7 @@
             //var entrytime = $('#entrytime').val().split(':');
             //var totaltime = $('#totaltime').val().split(':');
 
-            //alert(entrytime);
+            alert(entrytime[1]+":"+entryTime[0]);
 
             //alert(totaltime);
 
