--- a/productivity/index.html
+++ b/productivity/index.html
@@ -47,6 +47,8 @@
          
          function calculate() {
 
+            alert(document.querySelector('input[name="entrytime"]').value);
+
             const entryTime = document.querySelector('input[name="entrytime"]').value.split(':');
             var totalTimeHour = document.querySelector('input[name="totaltimehour"]').value;
             var totalTimeMinute = document.querySelector('input[name="totaltimeminute"]').value;
@@ -56,9 +58,9 @@
             //var entrytime = $('#entrytime').val().split(':');
             //var totaltime = $('#totaltime').val().split(':');
 
+            alert(entryTime);
+            
             alert(entrytime[1]+":"+entryTime[0]);
-
-            //alert(totaltime);
 
             //alert(saveTimeInMinutes);
 
