--- a/productivity/index.html
+++ b/productivity/index.html
@@ -47,7 +47,7 @@
          
          function calculate() {
 
-            alert(document.querySelector('input[name="entrytime"]').value);
+            //alert(document.querySelector('input[name="entrytime"]').value);
 
             const entryTime = document.querySelector('input[name="entrytime"]').value.split(':');
             var totalTimeHour = document.querySelector('input[name="totaltimehour"]').value;
@@ -58,9 +58,9 @@
             //var entrytime = $('#entrytime').val().split(':');
             //var totaltime = $('#totaltime').val().split(':');
 
-            alert(entryTime);
-            
-            alert(entrytime[1]+":"+entryTime[0]);
+            //alert(entryTime);
+
+            alert(entryTime[1]+":"+entryTime[0]);
 
             //alert(saveTimeInMinutes);
 
