--- a/productivity/index.html
+++ b/productivity/index.html
@@ -60,11 +60,11 @@
 
             //alert(entryTime);
 
-            alert(entryTime[1]+":"+entryTime[0]);
+            //alert(entryTime[1]+":"+entryTime[0]);
 
             //alert(saveTimeInMinutes);
 
-            var entryTimeInMinutes = entryTime[1]*60+entryTime[0];
+            var entryTimeInMinutes = entryTime[0]*60+entryTime[1];
 
             var totalTimeInMinutes = totalTimeHour*60+totalTimeMinute;
             var saveTimeInMinutes = saveTimeHour*60+saveTimeMinute;
