--- a/productivity/index.html
+++ b/productivity/index.html
@@ -55,6 +55,11 @@
             var saveTimeHour = document.querySelector('input[name="savetimehour"]').value;
             var saveTimeMinute = document.querySelector('input[name="savetimeminute"]').value;
 
+
+            alert (entryTime);
+            alert (totalTimeHour+":"+totalTimeMinute);
+            alert (saveTimeHour+":"+saveTimeMinute);
+            
             //var entrytime = $('#entrytime').val().split(':');
             //var totaltime = $('#totaltime').val().split(':');
 
@@ -65,9 +70,12 @@
             //alert(saveTimeInMinutes);
 
             var entryTimeInMinutes = entryTime[0]*60+entryTime[1];
-
             var totalTimeInMinutes = totalTimeHour*60+totalTimeMinute;
             var saveTimeInMinutes = saveTimeHour*60+saveTimeMinute;
+            
+            alert (entryTimeInMinutes);
+            alert (totalTimeInMinutes);
+            alert (saveTimeInMinutes);
 
             var exitTimeInMinutes = entryTimeInMinutes+totalTimeInMinutes-saveTimeInMinutes;
 
