--- a/productivity/index.html
+++ b/productivity/index.html
@@ -72,12 +72,14 @@
             var entryTimeInMinutes = entryTime[0]*60+entryTime[1];
             var totalTimeInMinutes = totalTimeHour*60+totalTimeMinute;
             var saveTimeInMinutes = saveTimeHour*60+saveTimeMinute;
-            
+
             alert (entryTimeInMinutes);
             alert (totalTimeInMinutes);
             alert (saveTimeInMinutes);
 
             var exitTimeInMinutes = entryTimeInMinutes+totalTimeInMinutes-saveTimeInMinutes;
+
+            alert (exitTimeInMinutes);
 
             var exitTimeHour = Math.floor(exitTimeInMinutes/60);
 
