--- a/productivity/index.html
+++ b/productivity/index.html
@@ -20,7 +20,7 @@
  }
 
  input[type='number']{
-    width: 80px;
+    width: 40px;
  } 
     </style>
 
@@ -29,12 +29,12 @@
     <main> 
         <div>
             <p style="text-align:center"><strong>Time Calculator</strong></p>
-            <p style="text-align:center"><strong>Entry :&nbsp; <input type="time" id="entrytime" name="entrytime" value="08:00"></strong></p>
-            <p style="text-align:center"><strong>Total Time :&nbsp; <input type="number" id="totaltimehour" name="totaltimehour" value="08"> &nbsp; hours &nbsp; <input type="number" id="totaltimeminute" name="totaltimeminute" value="00"> &nbsp; minutes </strong></p>
-            <p style="text-align:center"><strong>Save Time :&nbsp; <input type="number" id="savetimehour" name="savetimehour" value="08"> &nbsp; hours &nbsp; <input type="number" id="savetimeminute" name="savetimeminute" value="00"> &nbsp; minutes </strong></p>
+            <p style="text-align:center"><strong>Entry : </strong>&nbsp; <input type="time" id="entrytime" name="entrytime" value="08:00"></p>
+            <p style="text-align:center"><strong>Total Time  </strong> :&nbsp; <input type="number" id="totaltimehour" name="totaltimehour" value="08"> &nbsp; hours &nbsp; <input type="number" id="totaltimeminute" name="totaltimeminute" value="00"> &nbsp; minutes</p>
+            <p style="text-align:center"><strong>Save Time </strong> :&nbsp; <input type="number" id="savetimehour" name="savetimehour" value="08"> &nbsp; hours &nbsp; <input type="number" id="savetimeminute" name="savetimeminute" value="00"> &nbsp; minutes </p>
            <!--
             <p style="text-align:center"><strong>Save Time :&nbsp; <input type="number" id="savetime" name="savetime" value="00:40"></strong>&nbsp;minutes</p>-->
-            <p style="text-align:center"><strong>Exit :&nbsp; <input type="time" id="exittime" name="exittime"></strong></p>-->
+            <p style="text-align:center"><strong>Exit : </strong>&nbsp; <input type="time" id="exittime" name="exittime"></p>
             <!--<p style="text-align:center"><strong>Billable Time :&nbsp; <input type="time" id="billabletime" name="billabletime"></strong></p>
             <p style="text-align:center"><strong>Productivity (%):&nbsp;<input type="productivity" id="productivity" name="productivity" min="1" max="100"></strong></p>-->
             <p style="text-align:center">&nbsp;</p>
