--- a/productivity/index.html
+++ b/productivity/index.html
@@ -24,7 +24,7 @@
  } 
 
  input[type='time']{
-    width: 200px;
+    width: 150px;
  } 
     </style>
 
@@ -32,15 +32,12 @@
   <body>
     <main> 
         <div>
-            <p style="text-align:center"><strong>Time Calculator</strong></p>
-            <p style="text-align:center"><strong>Clock In </strong> :&nbsp; <input type="time" id="entrytime" name="entrytime" value="08:00"></p>
-            <p style="text-align:center"><strong>Total Treatment Time </strong> :&nbsp; <input type="number" id="totaltimehour" name="totaltimehour" value="08"> &nbsp; hours &nbsp; <input type="number" id="totaltimeminute" name="totaltimeminute" value="00"> &nbsp; minutes</p>
-            <p style="text-align:center"><strong>Group Time </strong> :&nbsp; <input type="number" id="savetimehour" name="savetimehour" value="00"> &nbsp; hours &nbsp; <input type="number" id="savetimeminute" name="savetimeminute" value="30"> &nbsp; minutes </p>
-           <!--
-            <p style="text-align:center"><strong>Save Time :&nbsp; <input type="number" id="savetime" name="savetime" value="00:40"></strong>&nbsp;minutes</p>-->
-            <p style="text-align:center"><strong>Clock Out : </strong>&nbsp; <input type="time" id="exittime" name="exittime"></p>
-            <!--<p style="text-align:center"><strong>Billable Time :&nbsp; <input type="time" id="billabletime" name="billabletime"></strong></p>
-            <p style="text-align:center"><strong>Productivity (%):&nbsp;<input type="productivity" id="productivity" name="productivity" min="1" max="100"></strong></p>-->
+            <p style="text-align:left"><strong>Time Calculator</strong></p>
+            <p style="text-align:left"><strong>Clock In </strong> :&nbsp; <input type="time" id="entrytime" name="entrytime" value="08:00"></p>
+            <p style="text-align:left"><strong>Total Treatment Time </strong> :&nbsp; <input type="number" id="totaltimehour" name="totaltimehour" value="08"> &nbsp; hours &nbsp; <input type="number" id="totaltimeminute" name="totaltimeminute" value="00"> &nbsp; minutes</p>
+            <p style="text-align:left"><strong>Group Time </strong> :&nbsp; <input type="number" id="savetimehour" name="savetimehour" value="00"> &nbsp; hours &nbsp; <input type="number" id="savetimeminute" name="savetimeminute" value="30"> &nbsp; minutes </p>
+            <p style="text-align:left"><strong>Clock Out : </strong>&nbsp; <input type="time" id="exittime" name="exittime"></p>
+            <p style="text-align:left"><strong>Productivity (%):&nbsp;<input type="number" id="productivity" name="productivity" readonly> &nbsp; %</strong></p>
             <p style="text-align:center">&nbsp;</p>
             <p style="text-align:center"><button type="button" onclick="reset()">Reset</button>&nbsp;&nbsp;&nbsp;<strong><button type="button" onclick="calculate()">Calculate</button></strong></p>
             <p style="text-align:center">&nbsp;</p>
@@ -99,8 +96,11 @@
 
             var exitTimeMinute = exitTimeInMinutes%60;
 
+            var productivity = Math.round(((entryTimeInMinutes + totalTimeInMinutes)/exitTimeInMinutes)*100* 100) / 100;
+
             document.querySelector('input[name="exittime"]').value = String(exitTimeHour).padStart(2, '0')+":"+String(exitTimeMinute).padStart(2, '0');
-            
+             
+            document.querySelector('input[name="productivity"]').value = String(productivity);
         } 
 
     </script>
