--- a/productivity/index.html
+++ b/productivity/index.html
@@ -59,7 +59,7 @@
                <span  style="text-align:left"><strong>Productivity (%):</strong>&nbsp;</span>
                <span style="text-align:right"><input type="number" id="productivity" name="productivity" readonly> &nbsp; %</strong></span>
             </p>
-            <p>  style="text-align:center">&nbsp;</p>
+            <p style="text-align:center">&nbsp;</p>
             <p style="text-align:center"><button type="button" onclick="reset()">Reset</button>&nbsp;&nbsp;&nbsp;<strong><button type="button" onclick="calculate()">Calculate</button></strong></p>
             <p style="text-align:center">&nbsp;</p>
           </div>  
