--- a/productivity/index.html
+++ b/productivity/index.html
@@ -24,7 +24,11 @@
  } 
 
  input[type='time']{
-    width: 150px;
+    width: 100px;
+ } 
+
+ input[type='text']{
+    width: 100px;
  } 
 
  .container {
