--- a/productivity/index.html
+++ b/productivity/index.html
@@ -49,11 +49,11 @@
             </p>
             <p>
                <span  style="text-align:left"><strong>Total Treatment Time </strong> :&nbsp; </span>
-               <span style="text-align:right"><input type="number" id="totaltimehour" name="totaltimehour" value="08"> &nbsp; hours &nbsp; <input type="number" id="totaltimeminute" name="totaltimeminute" value="00"> &nbsp; minutes</span>
+               <span style="text-align:right"><input type="number" id="totaltimehour" name="totaltimehour" value="08"> &nbsp; H &nbsp; <input type="number" id="totaltimeminute" name="totaltimeminute" value="00"> &nbsp; m</span>
             </p>
             <p>
                <span  style="text-align:left"><strong>Group Time </strong> :&nbsp;</span>
-               <span style="text-align:right"><input type="number" id="savetimehour" name="savetimehour" value="00"> &nbsp; hours &nbsp; <input type="number" id="savetimeminute" name="savetimeminute" value="30"> &nbsp; minutes</span> 
+               <span style="text-align:right"><input type="number" id="savetimehour" name="savetimehour" value="00"> &nbsp; H &nbsp; <input type="number" id="savetimeminute" name="savetimeminute" value="30"> &nbsp; m</span> 
             </p>
             <p> 
                <span  style="text-align:left"><strong>Clock Out : </strong>&nbsp;</span>
