--- a/productivity/index.html
+++ b/productivity/index.html
@@ -72,7 +72,7 @@
     <script>
 
          function reset() {
-            document.querySelector('input[name="exittime"]').value = "08:00";
+            document.querySelector('input[name="exittime"]').value = "";
             document.querySelector('input[name="totaltimehour"]').value = "08";
             document.querySelector('input[name="totaltimeminute"]').value = "00";
             document.querySelector('input[name="savetimehour"]').value = "00";
