--- a/productivity/index.html
+++ b/productivity/index.html
@@ -73,6 +73,7 @@
 
          function reset() {
             document.querySelector('input[name="exittime"]').value = "";
+            document.querySelector('input[name="productivity"]').value = "";
             document.querySelector('input[name="totaltimehour"]').value = "08";
             document.querySelector('input[name="totaltimeminute"]').value = "00";
             document.querySelector('input[name="savetimehour"]').value = "00";
