--- a/productivity/index2.html
+++ b/productivity/index2.html
@@ -46,10 +46,7 @@
         <div class="container">
           <div>
             <p style="text-align:center"><strong>Time Calculator</strong></p>
-            <div role="main" class="ui-content">
-              <label for="slider-0">Input slider:</label>
-              <input type="range" name="slider-0" id="slider-0" value="60" min="0" max="100">
-            </div>
+          
             <p> 
               <span style="text-align:left"><strong>Clock In </strong> :&nbsp;</span>
               <span style="text-align:right"> <input type="time" id="entrytime" name="entrytime" value="08:00"></span>
@@ -61,6 +58,9 @@
             <p>
                <span  style="text-align:left"><strong>Group Time </strong> :&nbsp;</span>
                <span style="text-align:right"><input type="number" id="savetimehour" name="savetimehour" value="00"> &nbsp; H &nbsp; <input type="number" id="savetimeminute" name="savetimeminute" value="30"> &nbsp; m</span> 
+            </p>
+            <p>
+              <input type="range" name="savetime-slider" id="savetime-slider" value="60" min="0" max="300">
             </p>
             <p> 
                <span  style="text-align:left"><strong>Clock Out : </strong>&nbsp;</span>
