--- a/productivity/index2.html
+++ b/productivity/index2.html
@@ -60,7 +60,7 @@
                <span style="text-align:right"><input type="number" id="savetimehour" name="savetimehour" value="00"> &nbsp; H &nbsp; <input type="number" id="savetimeminute" name="savetimeminute" value="30"> &nbsp; m</span> 
             </p>
             <p>
-              <input type="range" name="savetime-slider" id="savetime-slider" value="60" min="0" max="300">
+              <span style="text-align:right"><input type="range" name="savetime-slider" id="savetime-slider" value="60" min="0" max="300"></span>
             </p>
             <p> 
                <span  style="text-align:left"><strong>Clock Out : </strong>&nbsp;</span>
