--- a/productivity/index2.html
+++ b/productivity/index2.html
@@ -74,7 +74,7 @@
           </div>  
           <div>
             <p>
-              <span style="text-align:right"><input type="range" name="savetime-slider" id="savetime-slider" value="60" min="0" max="300"></span>
+              <input type="range" name="savetime-slider" id="savetime-slider" value="60" min="0" max="300">
             </p>
           </div>
         </div>
